<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F172A"
    tools:context=".QuizActivity" >

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/footer" />

    <ImageView
        android:id="@+id/quiz_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/body"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ques" />

    <TextView
        android:id="@+id/ques"
        android:layout_width="246dp"
        android:layout_height="139dp"
        android:gravity="center"
        android:text="@string/ques1"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <ImageView
        android:id="@+id/quiz_ans1"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ques"
        app:srcCompat="@drawable/ans" />

    <ImageView
        android:id="@+id/quiz_ans2"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_ans1"
        app:srcCompat="@drawable/ans" />


    <TextView
        android:id="@+id/timer"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/next"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <ImageView
        android:id="@+id/quiz_ans3"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_ans2"
        app:srcCompat="@drawable/ans" />

    <Button

        android:id="@+id/homeptn"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/home"
        android:contentDescription="@string/app_name"
        android:onClick="toHomeFromQuiz"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/muteptn"
        android:layout_width="36dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mutepng"
        android:contentDescription="@string/app_name"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeptn" />

    <Button
        android:id="@+id/option1"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/ans"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/ans1"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ques" />

    <Button
        android:id="@+id/option2"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ans"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/ans2"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_ans1" />

    <Button
        android:id="@+id/option3"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ans"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/ans3"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_ans2" />

</androidx.constraintlayout.widget.ConstraintLayout>